Removed unused imports, fixed some package declaration, and replaced @TargetApi